# cpp-satellite-sniffer-botfsm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  getSatPos.py  satellite_sniffer_BoTFSM.sln
cmake/: FindSDL2_gfx.cmake
cpp-iniparser/: cpp-iniparser.vcxproj  cpp-iniparser.vcxproj.filters
imgui_sdl_d3d/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_internal.h  imgui_sdl_d3d.vcxproj  imgui_sdl_d3d.vcxproj.filters  stb_truetype.h
imgui_sdl_d3d/include/: imgui_impl_dx9.h  stb_textedit.h  stb_truetype.h
imgui_sdl_d3d/src/: imgui_impl_dx9.cpp
lib/: .gitignore
libs/: SDL2_gfx.lib
libsgp4/: DateTime.h  libsgp4.vcxproj  libsgp4.vcxproj.filters
libsgp4/include/: DateTime.h
licences/: cpp_iniparser_LICENCE  imgui_LICENCE  imgui_sdl_d3d_LICENCE
old_src/: CMakeLists.txt  satellite_sniffer_BoTFSM.sln
old_src/DearImGUI/: DearImGUI.vcxproj  DearImGUI.vcxproj.filters
old_src/cpp-iniparser/: CMakeLists.txt  cpp-iniparser.vcxproj.filters
old_src/libsgp4/: CMakeLists.txt  libsgp4.vcxproj.filters
old_src/satellite_sniffer_BoTFSM/: CMakeLists.txt  satellite_sniffer_BoTFSM.vcxproj
old_src/satellite_sniffer_BoTFSM/include/: Config.h  Globals.h  LoadError.hpp  Map.h  Menu.h  Popup.h  Program.h  ProgramState.h  Resources.h  Satellite.h  Satellites.h  Trajectory.h  UISatellite.h
old_src/satellite_sniffer_BoTFSM/src/: Canvas.cpp  Config.cpp  Map.cpp  Program.cpp  Resources.cpp  Satellite.cpp  Satellites.cpp  ScreenText.cpp  Trajectory.cpp  UIElement.cpp  UISatellite.cpp  main.cpp
res/settings/: settings.ini  settings.json
res/shaders/: textureFrag.frag  textureVert.vert  trajectoryFrag.frag  trajectoryVert.vert
res/textures/: icons.xcf
resources/scripts/: gatherSatTLE.py  post_build.bat
satellite_sniffer_BoTFSM/: BezierCurve.cpp  BezierCurve.h  Button.cpp  Button.h  Canvas.h  CelMechConst.h  Config.cpp  Config.h  GeoCoordinate.cpp  GeoCoordinate.h  Globals.h  LoadError.hpp  LoadSatellites.cpp  LoadSatellites.h  Map.cpp  Map.h  MechStandards.cpp  MechStandards.h  Menu.cpp  Menu.h  Popup.cpp  Popup.h  Program.cpp  Program.h  ProgramState.h  Resources.cpp  Resources.h  SDL_PointOperators.hpp  Satellite.cpp  Satellite.h  SatelliteLoader.cpp  SatelliteLoader.h  Satellites.cpp  Satellites.h  ScreenText.cpp  ScreenText.h  Sprite.cpp  Sprite.h  TLE.cpp  TLE.h  (+11 more)
satellite_sniffer_BoTFSM/include/: Menu.h  Popup.h  ProgramState.h  Satellite.h  Satellites.h  ScreenText.h  Sprite.h  Texture.h  Trajectory.h  UISatellite.h
satellite_sniffer_BoTFSM/src/: Canvas.cpp  Map.cpp  Menu.cpp  Satellite.cpp  Satellites.cpp  Texture.cpp  UISatellite.cpp  main.cpp
src/: CMakeLists.txt  satellite_sniffer_BoTFSM.sln
src/DearImGUI/: CMakeLists.txt
src/cpp-iniparser/: cpp-iniparser.vcxproj
src/imgui/: CMakeLists.txt
src/imgui_sdl_d3d/: imgui_sdl_d3d.vcxproj  imgui_sdl_d3d.vcxproj.filters
src/imgui_sdl_d3d/include/: imgui.h  imgui_impl_dx9.h  stb_textedit.h
src/imgui_sdl_d3d/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx9.cpp
src/libsgp4/: libsgp4.vcxproj
src/libsgp4/include/: DateTime.h
src/satellite_sniffer_BoTFSM/: CMakeLists.txt  satellite_sniffer_BoTFSM.vcxproj  satellite_sniffer_BoTFSM.vcxproj.filters
src/satellite_sniffer_BoTFSM/include/: Canvas.h  Config.h  Map.h  Program.h  Resources.h  Sprite.h  Trajectory.h  UIElement.h  UISatellite.h
src/satellite_sniffer_BoTFSM/src/: Config.cpp  Map.cpp  Menu.cpp  Popup.cpp  Program.cpp  Resources.cpp  Satellite.cpp  Satellites.cpp  Texture.cpp  Trajectory.cpp  main.cpp
src/scripts/: post_build.bat
src/sgp4/: CMakeLists.txt
src/sniffer/: CMakeLists.txt  Canvas.h  Config.cpp  Config.h  Globals.h  LoadError.hpp  Map.cpp  Map.h  Menu.cpp  Menu.h  Popup.cpp  Popup.h  Program.cpp  Program.h  ProgramState.h  Resources.cpp  Resources.h  Satellite.cpp  Satellite.h  Satellites.cpp  Satellites.h  ScreenText.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Trajectory.cpp  Trajectory.h  UIElement.cpp  UIElement.h  UISatellite.cpp  UISatellite.h  main.cpp  stdafx.h  types.h
